--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,367 +1,166 @@
 * {
-  font-family: 'Courier New', Courier, monospace;
-  overflow: hidden;
-  color: black;
-}
-
-html, body {
-  overflow-x: hidden;
-}
-
-body {
-  position: relative;
-}
-
-/* Hide scrollbar */
-
-html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar {
-  display: none;
-}
-
-/* p5.js */
-
-canvas {
-  width: 80%;
-  height: 80%;
-}
-
-/* Modal */
-
-.modal {
-  will-change: transform !important;
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 30px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modalContent {
-  font-size: calc(11px + 0.1vw) !important;
-  background-color: #fefefe;
-  margin: auto;
-  border: 1px solid #888;
-  max-width: 55%;
-  margin-bottom: 5vw;
-}
-
-.closeModal {
-  color: #aaaaaa;
-  float: right;
-  font-size: calc(20px + 0.1vw) !important;
-  font-weight: bold;
-  margin: 12px;
-}
-
-.closeModal:hover, .closeModal:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* Fade transition */
-
-.fade_in_page {
-  opacity: 0;
-  animation: fadeIn ease 4s forwards;
-  -webkit-animation: fadeIn ease 4s forwards;
-  -moz-animation: fadeIn ease 4s forwards;
-  -o-animation: fadeIn ease 4s forwards;
-  -ms-animation: fadeIn ease 4s forwards;
-  animation-delay: 9.95s;
-}
-
-.fade_in_page_after {
-  opacity: 0;
-  animation: fadeIn ease 4s forwards;
-  -webkit-animation: fadeIn ease 4s forwards;
-  -moz-animation: fadeIn ease 4s forwards;
-  -o-animation: fadeIn ease 4s forwards;
-  -ms-animation: fadeIn ease 4s forwards;
-  animation-delay: 10.8s;
-}
-
-.rapid_fade_in {
-  opacity: 0;
-  animation: fadeIn ease 2.2s forwards;
-  -webkit-animation: fadeIn ease 2.2s forwards;
-  -moz-animation: fadeIn ease 2.2s forwards;
-  -o-animation: fadeIn ease 2.2s forwards;
-  -ms-animation: fadeIn ease 2.2s forwards;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
+    font-family: 'Rubik';
+    overflow: hidden;
+    color: black;
   }
-  100% {
-    opacity: 1;
+  
+  /* @font-face {
+    font-family: 'Rubik';
+    src: url('../assets//Rubik/static/Rubik-Light.ttf');
+    font-weight: normal;
+    font-style: normal;
+  } */
+  
+  html, body {
+    overflow-x: hidden;
   }
-}
-
-@-moz-keyframes fadeIn {
-  0% {
-    opacity: 0;
+  
+  body {
+    position: relative;
   }
-  100% {
-    opacity: 1;
+  
+  /* Hide scrollbar */
+  
+  html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar {
+    display: none;
   }
-}
 
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
+  body {
+      width: 50%;
+      margin: auto;
   }
-  100% {
-    opacity: 1;
+
+  h3 {
+      font-size: 50px;
   }
-}
+  h6 {
+      font-weight: 300;
+      font-size: 2.2em;
+      margin-top: 5%;
+      margin-bottom: 5%;
 
-@-o-keyframes fadeIn {
-  0% {
-    opacity: 0;
+
   }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-ms-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-/* Landing */
-
-.landing_grid_container {
-  position: fixed;
-  display: grid;
-  height: 100%;
-  width: 100%;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: 1fr 5fr 1fr;
-}
-
-/* Landing header */
-
-#name {
-  font-size: calc(24px + 1.2vw);
-  margin-bottom: 0 !important;
-}
-
-#subtitle {
-  font-size: calc(11px + 0.3vw);
-  text-align: right;
-  margin-top: -4px !important;
-  margin-bottom: 5px;
-}
-
-.landing_heading {
-  margin-top: -1.5vh !important;
-  margin-left: 2vw !important;
-  font-size: calc(6px + 0.8vw);
-  justify-self: center;
-  align-self: top;
-  grid-row: 1;
-  grid-column: 2;
-  text-align: center;
-}
+  
 
 .landing_contact_links {
-  display: inline-flex;
-  align-self: center;
-  margin-top: 8vh !important;
-  justify-self: top;
-  grid-column: 2;
-  grid-row: 3;
-}
+    display: inline-flex;
+    align-self: center;
+    /* margin-top: 8vh !important; */
+    justify-self: top;
+    /* grid-column: 2;
+    grid-row: 3; */
+  }
 
-.landing_contact_links a {
-  justify-items: center;
-  margin-left: 10px;
-}
+  .landing_contact_links a::after {
 
-/* Landing about modal */
+    background-color: none !important;
+    transition: none !important;
+  }
+  
+  .landing_contact_links a {
+    justify-items: center;
+    margin-left: 10px;
+  }
+  
+  /* Landing about modal */
+  
 
-.landing_about {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  padding-right: 10vw;
-  padding-left: 10vw;
-}
+  body {
+    font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+      sans-serif;
+    font-size: calc(10px + 0.33vw);
+    /* -webkit-font-smoothing: antialiased;
+    padding: 5vh 10vw;
+    color: #121314; */
+  }
+  h1 {
+    font-size: 2.5em;
+    font-weight: 300;
+    margin-bottom: 0;
+  }
+  p {
+    font-size: 1.6em;
+    font-weight: 300;
+    line-height: 1.4;
+    max-width: 28em;
+  }
+  a {
+    text-decoration: none;
+    /* color: #121314; */
+    position: relative;
+  }
+  a:after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 60%;
+    left: -0.1em;
+    right: -0.1em;
+    bottom: 0;
+    transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
+    background-color: rgba(85, 160, 80, 0.5);
+	/* fill(85 + 25 * rand2(), 140 + 15 * rand2(), 80 + 15 * rand2()); */
+  }
+  a:hover:after {
+    top: 0%;
+  }
 
-.landing_about_heading {
-  text-align: left;
-  justify-self: center;
-  align-self: center;
-  padding-top: 50px;
-}
+  .grid_container {
+      display: grid;
+      grid-template-columns: 1;
+      grid-template-rows: auto;
+  }
 
-.landing_about_item {
-  height: fit-content;
-  justify-self: flex-end;
-}
-
-.landing_about_item p {
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
-.landing_about_item h3 {
-  font-size: calc(16px + 0.3vw);
-  margin-bottom: 0;
-  margin-top: 35px;
-}
-
-.landing_about_item i {
-  margin-top: -60px;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.link span {
-  text-decoration: none;
-  background-image: linear-gradient(currentColor, currentColor);
-  background-position: 0 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 1px;
-  transition: background-size cubic-bezier(0.25, 0.25, 0.25, 0.25) 0.25s;
-}
-
-.link span:hover {
-  text-decoration: none;
-  background-size: 100% 1px;
-}
-
-/* Contact icon links */
+  /* Contact icon links */
 
 .icon {
-  font-size: calc(13px + 0.6vw);
-  transition: color 0.4s;
-  cursor: pointer;
-  margin-left: 30px;
-}
-
-.material-icons {
-  font-size: calc(15px + 0.6vw) !important;
-}
-
-.fa-user-circle:hover {
-  color: rgb(179, 54, 54);
-  transition: color 0.4s;
-}
-
-.fa-linkedin-in:hover {
-  color: rgb(157, 54, 54);
-  transition: color 0.4s;
-}
-
-.fa-github:hover {
-  color: rgb(137, 54, 54);
-  transition: color 0.4s;
-}
-
-.fa-file-pdf-o:hover {
-  color: rgb(106, 54, 54);
-  transition: color 0.4s;
-}
-
-.material-icons:hover {
-  color: rgb(79, 54, 54);
-  transition: color 0.4s;
-}
-
-#last_landing_about_item {
-  padding-bottom: 7vh;
-}
-
-#sketch-div {
-  width: 50% !important;
-  height: 50% !important;
-}
-
-/* Smartphones (landscape) ----------- */
-
-@media only screen and (min-width: 321px) and (max-height: 500px) {
-  .landing_heading {
-    margin-top: 3vh !important;
-    font-size: 1px;
-  }
-  .landing_contact_links {
-    margin-top: -14vh !important;
-  }
-  .landing_about {
-    display: block;
-    grid-auto-flow: row dense;
-  }
-  .modalContent {
-    max-width: 85%;
-    margin-bottom: 13vh;
-  }
-  .canvas {
-    height: 15% !important;
-  }
-}
-
-/* Smartphones (portrait) ----------- */
-
-@media only screen and (max-width: 420px) {
-  .landing_heading {
-    margin-top: 4vh !important;
-  }
-  .landing_contact_links {
-    padding: 1px;
-    margin-bottom: 19vh !important;
-    margin-left: -22vw !important;
-    justify-content: center !important;
-  }
-  .contact_link {
-    margin-left: 35px;
-    min-width: 50px !important;
-    margin-top: 15px !important;
-  }
-  .modalContent {
-    max-width: 85% !important;
-    margin-bottom: 15vh;
-  }
-  /* Flexbox Styles */
-  .landing_contact_links {
-    display: flex !important;
-    flex-wrap: wrap !important;
+    font-size: calc(13px + 0.6vw);
+    transition: color 0.4s;
+    cursor: pointer;
+    margin-left: 30px;
   }
 
-  .canvas {
-    height: 30% !important;
-    z-index: -1 !important;
+  .icon::after {
+
+    background-color: none;
+    transition: none;
   }
 
-}
+  .material-icons::after {
 
-/* Desktop ----------- */
-
-@media only screen and (min-width: 500px) {
-  .landing_contact_links {
-    margin-left: auto !important;
-    margin-right: auto !important;
+    background-color: none;
+    transition: none;
   }
-  .landing_about_heading, .landing_about_item {
-    padding-right: 3vw;
-    padding-left: 3vw;
+  
+  .material-icons {
+    font-size: calc(15px + 0.6vw) !important;
+    background-color: none;
+    transition: none;
   }
-  .modalContent {
-    max-width: 65%;
+  
+  .fa-user-circle:hover {
+    color: rgba(85, 160, 80, 0.5);
+    transition: color 0.4s;
   }
-}
+  
+  .fa-linkedin-in:hover {
+    color: rgba(85, 160, 80, 0.5);
+    transition: color 0.4s;
+  }
+  
+  .fa-github:hover {
+    color: rgba(85, 160, 80, 0.5);
+    transition: color 0.4s;
+  }
+  
+  .fa-file-pdf-o:hover {
+    color: rgba(85, 160, 80, 0.5);
+    transition: color 0.4s;
+  }
+  
+  .material-icons:hover {
+    color: rgba(85, 160, 80, 0.5);
+    transition: color 0.4s;
+  }
