--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,139 +1,101 @@
-{% extends "layout.html" %}
-{% block title %}index{% endblock %}
-{% block sidebar %}
-{% endblock %}
-{% block content %}
-<div class="fade_in_page landing_grid_container">
+<!DOCTYPE html>
+<html lang="en">
 
-    <!-- Heading -->
-    <div class="landing_heading ">
-        <p id="name">Al Miller III</p>
-        <p id="subtitle" class="fade_in_page_after">Software engineer passionate about holistic sustainability.</p>
-    </div>
-    
-    <div id="sketch-div"></div>
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
 
-    <!-- Contact links -->
-    <div class="landing_contact_links">
-        <div class="contact_link">
-            <i id="modalClick" class="far fa-user-circle icon"></i>
-        </div>
-        <div class="contact_link">
-            <a href="https://www.linkedin.com/in/al-miller/" target="_blank">
-                <i class="fab fa-linkedin-in icon"></i>
-            </a>
-        </div>
-        <div class="contact_link">
-            <a href="https://www.github.com/ANMillerIII/" target="_blank">
-                <i class="fab fa-github icon"></i>
-            </a>
-        </div>
-        <div class="contact_link">
-            <a href="{{ url_for('static', filename='./assets/resume/resume_am.pdf') }}" target="_blank"
-                download="resume_am">
-                <i class="far fa-file-pdf-o icon"></i>
-            </a>
-        </div>
-        <div class="contact_link">
-            <a href="mailto:albert.miller@uconn.edu" target="_blank">
-                <i class="material-icons icon">&#xe0e1;</i>
-            </a>
-        </div>
-    </div>
+    <title>Al Miller III</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Modal -->
-    <div id="aboutModal" class="modal">
-        <div class="modalContent">
-            <span class="closeModal" style="cursor: pointer;">&times;</span>
-            <div class="landing_about">
-                <div class="landing_about_heading">
-                    <p>
-                        Al is a software engineer passionate about all things at the intersection of technology and
-                        sustainability. A few of his more recent projects and competencies are noted below.
-                    </p>
-                    <p>
-                        Do please feel free to <a class="link" href="mailto:albert.miller@uconn.edu"><span>reach
-                                out.</span></a>
-                    </p>
-                </div>
-                <div class="landing_about_item">
-                    <a class="link" href="https://github.com/ANMillerIII" target="_blank">
-                        <h3><span>Cloud & Distributed Systems</span></h3>
-                    </a>
-                    <i>2 years experience</i>
-                    <p><i>(In progress)</i> AWS Cloud Developer Certified - Associates (2020). Demonstrated
-                        understanding of cloud best-practices and how to go from an idea to a widely distributed
-                        product.</p>
-                    <p>Particular experience in AWS Lambda, EC2, DynamoDB, Amplify, CloudFront, and IAM.</p>
-                </div>
-                <div class="landing_about_item">
-                    <h3><span>Front-End Development</span></h3>
-                    <i>2 years experience</i>
-                    <p>Proficient in JavaScript, React & redux, and responsive web-design in general.</p>
-                    <p>Solid background in design best-practices. Good eye for detail.</p>
-                </div>
-                <div class="landing_about_item">
-                    <a class="link" href="https://github.com/ANMillerIII/NLP-Equipment-Failure-Mitigation"
-                        target="_blank">
-                        <h3><span>Machine Learning & Natural Language Processing</span></h3>
-                    </a>
-                    <i>3 years experience</i>
-                    <p>Built various multi-label text-classification models (sklearn, NLTK, TensorFlow) for analysis of
-                        utility equipment to identify trends and deficiencies in utility maintenance programs.</p>
-                    <p>Applied knowledge of core-ML concepts such as model validation and sparse sampling and evaluated
-                        tradeoffs to refine and benchmark model performance on heavily imbalanced datasets.</p>
-                </div>
-                <div class="landing_about_item">
-                    <h3><span>SDLC, Agile, VCS and CI/CD</span></h3>
-                    <i>4+ years experience</i>
-                    <p>Team-oriented workstyle. Well-acquainted with Agile philosophies and workstyle, as well as more
-                        traditional management styles.</p>
-                    <p>Well-versed in SDLC best-practices, git, and a growing curiosity and understanding of continuous
-                        integration/development methods.</p>
-                </div>
-                <div class="landing_about_item">
-                    <a class="link" href="https://www.mpr.com/" target="_blank">
-                        <h3><span>Technical Consulting Experience</span></h3>
-                    </a>
-                    <i>2+ years experience</i>
-                    <p>Working at a boutique technical consulting firm in Washington D.C., consulting with management of
-                        large capital projects including the Department of Energy and National Science Foundation, in
-                        regards to project schedule and risk.</p>
-                    <p>Built trusted internal and external partnerships, executed a number of fast-paced efforts.</p>
-                </div>
-                <div class="landing_about_item">
-                    <a class="link" href="https://github.com/ANMillerIII/GIS-Risk" target="_blank">
-                        <h3><span>Geographical Information Systems (GIS)</span></h3>
-                    </a>
-                    <i>2 years experience</i>
-                    <p>Developed UI for utility asset management, specifically related to mitigation of wildfire risks
-                        using PostGIS, Postgres, as well as the Esri ArcGIS JavaScript API.</p>
-                    <p>Proficient in satellite image processing (LiDAR) and network analysis.</p>
-                </div>
-                <div class="landing_about_item">
-                    <h3><span>Multi-Disciplinary Technical Background</span></h3>
-                    <i>5+ years experience</i>
-                    <p>Graduated with a degree in Mechanical Engineering from the University of Connecticut in 2018.</p>
-                    <p>Developed expertise in Computational Fluid Dynamics, performing ventilation system calculations
-                        for an energy storage systems provider directly used as the basis for saving millions in
-                        potential regulatory-mandated retrofits.</p>
-                    <p>Applied knowledge of statistics, particularly designing and executing Monte Carlo simulations
-                        for predictive analysis in various applications including equipment failure rates, project
-                        risk-based cost projections, and even neutronics (MCNP).</p>
-                </div>
+    <!-- Icon -->
+    <link rel="shortcut icon" type="image/x-icon" href="../static/assets/favicon.svg">
 
-                <div class="landing_about_item" id="last_landing_about_item">
-                    <a class="link" href="https://www.youtube.com/watch?v=ai6nz2hmtW8" target="_blank">
-                        <h3><span>A Love of People and Nature</span></h3>
-                    </a>
-                    <i>24 years experience</i>
-                    <p>Passionate about sustainability. Lived & worked on an organic farm for a year in college, doing
-                        community outreach.</p>
-                    <p>Through hiked the Appalachian and Pacific Crest Trails solo (summers of '17 and '18,
-                        respectively).</p>
-                </div>
+    <!-- Global styles -->
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/style.css">
+
+    <!-- Contact links (FA and Material icons) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,500,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXNHMQ5QNH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-JXNHMQ5QNH');
+    </script>
+</head>
+
+<body>
+    <!-- p5.js imports for tree -->
+    <script src="../static/js/p5.min.js"></script>
+    <div class="grid_container">
+                <!-- p5 sketch -->
+                <!-- <div class="grid_item ">
+                    <div id="sketch-container"></div>
+                </div> -->
+        <!-- Text -->
+        <div class="grid_item ">
+            <div class="fade_in_page_after">
+                <h1>Thanks for stopping by.</h1>
+                <h6>My name is Al Miller.</h6>
+                <p>I am a software engineer passionate about sustainability, and working at consulting 
+                    <a href="#">company</a>in Washington D.C. In the day-to-day we work together to help our federal and private energy sector clients more sustainable, safer, and efficient through software.
+                </p>
+
+                <p>
+                    Recently I've been working on <a href="https://contours.co">contours.co</a>, a image processing pipeline for computer vision requests. I am also interested in image processing LiDAR, weighted overlay analysis with GIS Open Layers called
+                    <a href="https://www.github.com/ANMillerIII/ol-weighted-overlay.git">ol-weighted-overlay</a>
+                    My primary interests lie in the intersection of sustainability, philosophy, and technology.
+                </p>
+                <p>
+                    My key compente
+                </p>
+                <p>
+                    Outside of work I enjoy trail running, learning new pieces by Ravel, and spending time with my girlfried Perrin.<a href="https://contours.co">contours.co</a>
+                    Communities I am involved indddddd are <a href="https://lesswrong.org">Less Wrong</a> and <a href="https://workonclimate.org">Work on Climate</a>.asdfasdf 
+                </p>
+                <p>I would love to connect! </p>
             </div>
         </div>
+
+        <!-- Contact links -->
+        <!-- <div class="grid_item">
+            <div class="landing_contact_links">
+                <div class="contact_link">
+                    <i id="modalClick" class="far fa-user-circle icon"></i>
+                </div>
+                <div class="contact_link">
+                    <a href="https://www.linkedin.com/in/al-miller/" target="_blank">
+                        <i class="fab fa-linkedin-in icon"></i>
+                    </a>
+                </div>
+                <div class="contact_link">
+                    <a href="https://www.github.com/ANMillerIII/" target="_blank">
+                        <i class="fab fa-github icon"></i>
+                    </a>
+                </div>
+                <div class="contact_link">
+                    <a href="../static/assets/resume/resume_am.pdf') }}" target="_blank" download="resume_am">
+                        <i class="far fa-file-pdf-o icon"></i>
+                    </a>
+                </div>
+                <div class="contact_link">
+                    <a href="mailto:albert.miller@uconn.edu" target="_blank">
+                        <i class="material-icons icon">&#xe0e1;</i>
+                    </a>
+                </div>
+            </div>
+        </div> -->
     </div>
-</div>
-{% endblock %}"
+
+    <!-- local JS imports for tree and modal -->
+    <script src="../static/js/main.js" defer></script>
+</body>
+
+</html>
